--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -1,32 +1,49 @@
+html, body, app-root {
+  height: 100%;
+  margin: 10px;
+}
+
+.main-block {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  background-image: url("src/assets/images/2307.jpg");
+  background-repeat: no-repeat;
+  background-size: 1920px 1080px;
+  background-position: center;
+}
+@function black($opacity) {
+  @return rgba(black, $opacity)
+}
+@function white($opacity) {
+  @return rgba(white, $opacity)
+}
+.main-block-dark {
+  position: fixed;
+  min-width: 100%;
+  min-height: 100%;
+  background: black(0.9);
+}
+
 .hidden-router {
   flex: 1 1 auto;
   display: flex;
   overflow: hidden;
 }
 
-.main-block {
-  //width: 100%;
-  //height: 100%;
-  //width: 1920px;
-  //height: 1080px;
-  //opacity: 0.5;
-  //background-image: url("src/assets/images/2307.jpg");
-}
-
 .main-section-block {
-  width: 650px;
-  height: 560px;
-  box-shadow: 0 0 2.9px 0.1px rgba(0, 0, 0, 0.3);
-  background-color: #ffffff;
+  max-width: 30rem;
+  background-color: #ffffff !important;
+  z-index: 1;
 }
 
 .montserrat-label {
   font-family: Montserrat-Regular;
-  font-size: 18px;
+  font-size: 1rem;
   color: #1a1a1a;
   line-height: 8px;
   text-align: left;
-  margin-left: 28px;
+  margin-left: 2rem;
 }
 
 .montserrat-icon {
@@ -36,21 +53,13 @@
 
 .show-password {
   font-family: Cuprum;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #656c75;
-  line-height: 8px;
+  line-height: 0.5rem;
   text-align: left
 }
 
-.login-page {
-  width: 500px;
-  margin: 0 auto;
-  background-color: white;
-}
-
 .enter-btn {
-  width: 142px !important;
-  height: 53px !important;;
   background-color: #00b2a8;
   outline-color: #00b2a8;
   border-color: #00b2a8;
@@ -82,7 +91,16 @@ label::after {
 
 .vitrina {
   font-family: Romul;
-  font-size: 41.5px;
+  font-size: 2.5625rem;
   letter-spacing: 6.23px;
   color: #0d0d0d;
+}
+
+.input-group-text {
+  background-color: white;
+  border-left: none;
+}
+
+.input-group>.custom-select:not(:last-child), .input-group>.form-control:not(:last-child) {
+  border-right: white;
 }
