--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="wrapper">
   <app-nav></app-nav>
   <router-outlet>
     <app-create-claim-btn></app-create-claim-btn>
@@ -7,3 +8,4 @@
   <toast-messages></toast-messages>
   <ngx-ui-loader></ngx-ui-loader>
   <app-footer></app-footer>
+</div>
