--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,7 +7,10 @@ body {
   height: 100%;
   font-family: 'Cuprum', sans-serif;
 }
-
+.wrapper {
+  height:auto !important;
+  min-height:100%;
+}
 .navbar {
   font-weight: bolder;
   font-size: 18px;
