--- a/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
+++ b/frontend/src/app/components/claims/create-claim/contract-ou/contract-ou.component.html
@@ -44,7 +44,7 @@
                   bindValue="value"
                   [(ngModel)]="contractForm.contractTypeId"
                   formControlName="contractTypeId"
-                  placeholder="{{ 'claim.encumbrance' | translate }}">
+                  placeholder="{{ 'claim.validator.contractTypeId' | translate }}">
                 </ng-select>
               </div>
             </div>
