--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -51,7 +51,7 @@
         <div class="col-sm" *ngFor="let data of appStatusesData;let i = index">
           <div class="row">
             <div class="col-sm text-center">
-              Комиссия: {{data.boardData.commission ? data.boardData.commission : 0 | mask : 'separator.2'}} ₸
+              Комиссия: <br> {{data.boardData.commission ? data.boardData.commission : 0 | mask : 'separator.2'}} ₸
             </div>
           </div>
           <div class="alert bg-secondary text-white font-weight-bolder boardTitle text-center" role="alert" translate>
@@ -70,11 +70,11 @@
                (cdkDropListDropped)="drop($event)">
             <div *ngFor="let item of data.boardData.applicationLightDtoList?.data; let i = index" cdkDrag
                  [class]="item.style" (cdkDragDropped)="changeStatus($event,item, data.value)">
-              <div class="card">
+              <div class="card" style="font-size: 14px;">
                 <div class="card-header">
                   {{item.id}} &nbsp;{{item.operationType?.name[getDicNameByLanguage()]}}
                   <button type="button" class="close"
-                          (click)="this.openModal2(this.closeRequestApplication, 'modal-xl')" data-dismiss="modal"
+                          (click)="this.openModal2(this.closeRequestApplication, 'modal-xl', item)" data-dismiss="modal"
                           aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -135,8 +135,10 @@
     <div class="row">
       <div class="col-sm-3">
         <h4>
-          Продажа <br>
-          ID - <span>1111</span>
+          <span *ngIf="isSell">Продажа</span>
+          <span *ngIf="!isSell">Покупка</span>
+          <br>
+          ID - <span>{{ applicationId }}</span>
         </h4>
       </div>
       <div class="col-sm-4">
@@ -144,7 +146,7 @@
           <legend class="scheduler-border">Агента (ID)</legend>
           <div class="row">
             <div class="col-sm">
-              <input type="text" class="form-control text-uppercase" readonly/>
+              <input type="text" class="form-control text-uppercase" readonly [(ngModel)]="agentFullname"/>
             </div>
           </div>
         </fieldset>
@@ -154,7 +156,7 @@
           <legend class="scheduler-border">Клиента (ID)</legend>
           <div class="row">
             <div class="col-sm">
-              <input type="text" class="form-control text-uppercase" readonly/>
+              <input type="text" class="form-control text-uppercase" readonly [(ngModel)]="clientFullname"/>
             </div>
           </div>
         </fieldset>
@@ -165,17 +167,47 @@
         <table class="table table-bordered table-sm">
           <thead class="text-center">
           <tr>
-            <th>Фото</th>
+            <th *ngIf="isSell">Фото</th>
             <th>Адрес</th>
-            <th>Цена</th>
-            <th>Комнатность</th>
+            <th *ngIf="isSell">Цена</th>
+            <th *ngIf="!isSell">Цена, тг от</th>
+            <th *ngIf="!isSell">Цена, тг до</th>
+            <th *ngIf="isSell">Комнатность</th>
+            <th *ngIf="!isSell">Комнатность, от</th>
+            <th *ngIf="!isSell">Комнатность, до</th>
             <th>Статус</th>
             <th>Документы</th>
             <th>Комиссия</th>
           </tr>
           </thead>
-          <tbody style="cursor: pointer">
-
+          <tbody *ngIf="objectData.length" class="text-center">
+            <tr *ngFor="let item of objectData; let i = index">
+              <td style="height: 130px; width: 150px" *ngIf="isSell">
+                <img *ngIf="getImgUrl(item.photoIdList)"
+                     [src]="getImgUrl(item.photoIdList)"
+                     alt="First Slide" class="photoList"
+                     style="height: 100%; width: 100%">
+              </td>
+              <td>{{ item.address }}</td>
+              <td *ngIf="isSell">{{ item.objectPrice | mask : 'separator.2'}} ₸</td>
+              <td *ngIf="!isSell">{{ item.objectPricePeriod?.from | mask : 'separator.2'}} ₸</td>
+              <td *ngIf="!isSell">{{ item.objectPricePeriod?.to | mask : 'separator.2'}} ₸</td>
+              <td *ngIf="isSell">{{ item.numberOfRooms }}</td>
+              <td *ngIf="!isSell">{{ item.numberOfRoomsPeriod?.from }}</td>
+              <td *ngIf="!isSell">{{ item.numberOfRoomsPeriod?.to }}</td>
+              <td>{{ item.status }}</td>
+              <td>
+                <p *ngIf="item.contractGuid">
+                  Договор ОУ -
+                  <a type="button" [href]="this.util.generatorFullUrl(item.contractGuid)" target="_blank">Документ</a>
+                </p>
+                <p *ngIf="item.depositGuid">
+                  Договор о задатке -
+                  <a type="button" [href]="this.util.generatorFullUrl(item.depositGuid)" target="_blank">Документ</a>
+                </p>
+              </td>
+              <td>{{ item.commission | mask : 'separator.2'}} ₸</td>
+            </tr>
           </tbody>
         </table>
       </div>
@@ -185,14 +217,111 @@
         <label>Если Вы хотите принудительно завершить сделку на данном этапе "Статус" то заполните обоснование для принудительного завершения заявки</label>
         <textarea
           class="col-sm-12 control" rows="4"
-          placeholder="Пояснение принудительного завершения заявки">
+          placeholder="Пояснение принудительного завершения заявки"
+          [(ngModel)]="comment">
         </textarea>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm">
+        <label style="margin-right: 16px;">Документ подтверждающий завершение сделки</label>
+        <input type="file" multiple [(ngModel)]="file">
+      </div>
+    </div>
+    <div class="row toggle-label" [ngClass]="{active: isActive}">
+      <div class="col-sm" style="cursor: pointer;">
+        <h5 (click)="onToggle()">
+          Если по успешно реализованная заявка связано со второй заявкой из системы, то укажите вторую заявку
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+        </h5>
+      </div>
+    </div>
+    <div class="row content-bundle" [ngClass]="{active: isActive}">
+      <div class="col-sm-4">
+        <div class="form-group row">
+          <label class="col-sm-5 col-form-label">ID второй заявки</label>
+          <div class="col-sm-7">
+            <input
+              type="number"
+              class="form-control"
+              placeholder="Введите ID заявки"
+              [(ngModel)]="secondId"/>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5">
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-primary" (click)="onSearch()">Поиск</button>
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-danger" (click)="clearTargetAppData()">Очистить</button>
+      </div>
+      <div class="col-sm-3">
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-success">Связать заявку</button>
+      </div>
+    </div>
+    <div class="row content-bundle" [ngClass]="{active: isActive}">
+      <table class="table table-bordered table-sm">
+        <thead class="text-center">
+          <tr>
+            <th>ID заявки</th>
+            <th>Операция</th>
+            <th>Дата создания</th>
+            <th>Район</th>
+            <th *ngIf="isSellTargetApp">Комнатность</th>
+            <th *ngIf="!isSellTargetApp">Комнатность, от</th>
+            <th *ngIf="!isSellTargetApp">Комнатность, до</th>
+            <th *ngIf="isSellTargetApp">Цена</th>
+            <th *ngIf="!isSellTargetApp">Цена, тг от</th>
+            <th *ngIf="!isSellTargetApp">Цена, тг до</th>
+            <th *ngIf="isSellTargetApp">Площадь</th>
+            <th *ngIf="!isSellTargetApp">Площадь, от</th>
+            <th *ngIf="!isSellTargetApp">Площадь, до</th>
+            <th *ngIf="isSellTargetApp">Этаж</th>
+            <th *ngIf="!isSellTargetApp">Этажность, от</th>
+            <th *ngIf="!isSellTargetApp">Этажность, до</th>
+            <th>Статус</th>
+            <th>Агент</th>
+            <th>Телефон</th>
+          </tr>
+        </thead>
+        <tbody class="text-center" *ngIf="targetAppData.length">
+          <tr *ngFor="let item of targetAppData; let index = index;" g>
+            <td>{{ item.id }}</td>
+            <td>{{ item.operationType }}</td>
+            <td>{{ item.createDate | date: 'dd.MM.yyyy' }}</td>
+            <td>{{ item.district }}</td>
+            <td *ngIf="isSellTargetApp">{{ item.numberOfRooms }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.numberOfRoomsPeriod?.from }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.numberOfRoomsPeriod?.to }}</td>
+            <td *ngIf="isSellTargetApp">{{ item.objectPrice }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.objectPricePeriod?.from }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.objectPricePeriod?.to }}</td>
+            <td *ngIf="isSellTargetApp">{{ item.totalArea }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.totalAreaPeriod?.from }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.totalAreaPeriod?.to }}</td>
+            <td *ngIf="isSellTargetApp">{{ item.floor }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.floorPeriod?.from }}</td>
+            <td *ngIf="!isSellTargetApp">{{ item.floorPeriod?.to }}</td>
+            <td>{{ item.status }}</td>
+            <td>{{ item.agentFullname }}</td>
+            <td>{{ item.agentPhone }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <div class="row text-right">
       <div class="col-sm">
-        <button type="button" class="btn btn-btn btn2 btn-secondary">Отмена</button>
-        <button type="button" class="btn btn-btn btn2 btn-success">Не реализован</button>
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-secondary" (click)="modalRef2.hide()">Отмена</button>
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-primary" (click)="closeDeal(false)" [disabled]="!comment">
+          Не реализован
+        </button>
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-success" (click)="closeDeal(true)" [disabled]="!comment">
+          Успешно реализован
+        </button>
+      </div>
+    </div>
+    <div class="row text-right" *ngIf="!util.hasShowAgentGroup('CHOOSE_GROUP_AGENT', roles)">
+      <div class="col-sm">
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-secondary">Отказать в завершении</button>
+        <button type="button" class="btn btn-sm btn-btn btn2 btn-success">Согласовать завершение</button>
       </div>
     </div>
   </div>
