--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,6 +6,7 @@
 body {
   height: 100%;
   font-family: 'Cuprum', sans-serif;
+  background-color: #ebedf0!important
 }
 .wrapper {
   height:auto !important;
