--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,6 +1,32 @@
-nav {
-  color: blue!important;
+.page-content-wrapper nav {
+  height: 5.625rem;
 }
-.nav2 {
-  color: blue!important;
+
+.nav-link-name {
+  font-family: Montserrat-Bold;
+  color: #373737;
+  line-height: 0.5rem;
+  font-size: 1.375rem;
+  font-weight: bold;
+  color: #373737;
 }
+
+.vitrina {
+  font-family: Romul;
+  font-size: 2.09375rem;
+  letter-spacing: 0.314375rem;
+  color: white;
+}
+
+a, a:active {
+  color: #ffffff;
+}
+
+
+
+
+
+
+
+
+
