--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,139 +1,151 @@
-<div class="card-body card-bg" ngxUiLoaderBlurred >
+<div class="card-body card-bg">
   <div class="card">
     <div class="card-body">
       <div class="row">
-        <div class="col-sm">
+        <div class="col-sm-6">
           <div class="row">
             <div class="col-sm">
-              <div class="form-group row">
-                <label for="surName" class="col-sm-4 col-form-label" translate>Агентские договора</label>
-                <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="2500000"/>
+              <div class="card">
+                <div class="view overlay">
+                  <img class="card-img-top" src="assets/images/home/2.jpg"
+                       alt="Card image cap">
                 </div>
-              </div>
-              <div class="form-group row">
-                <label for="surName" class="col-sm-4 col-form-label" translate>Сумма задатков</label>
-                <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="1000"/>
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="surName" class="col-sm-4 col-form-label" translate>Сумма продаж</label>
-                <div class="col-sm">
-                  <input type="text" class="form-control" readonly [value]="70000"/>
+                <div class="card-body">
+                  <h4 class="card-title">Агентские договора:</h4>
+                  <p class="card-text">2 500 000 тг</p>
                 </div>
               </div>
             </div>
-
+            <div class="col-sm">
+              <div class="card">
+                <div class="view overlay">
+                  <img class="card-img-top" src="assets/images/home/3.jpg"
+                       alt="Card image cap">
+                </div>
+                <div class="card-body">
+                  <h4 class="card-title">Сумма задатков:</h4>
+                  <p class="card-text">1 000 000 тг</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="card">
+                <div class="view overlay">
+                  <img class="card-img-top" src="assets/images/home/1.jpg"
+                       alt="Card image cap">
+                </div>
+                <div class="card-body">
+                  <h4 class="card-title">Сумма продаж:</h4>
+                  <p class="card-text">70 000 000 тг</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="row">
-            <app-charts></app-charts>
+            <p class="h5 font-weight-bold">Рейтинг экспертов</p>
+          </div>
+          <div class="row">
+            <div class="col-sm">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  <div class="row">
+                    <div class="col-sm-1">
+                      <span class="badge badge-pill badge-info">1</span>
+                    </div>
+                    <div class="col-sm-4">
+                      Гущина Любовь
+                    </div>
+                  </div>
+                </li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Morbi leo risus</li>
+                <li class="list-group-item">Porta ac consectetur ac</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="col-sm" [formGroup]="applicationLightForm">
-          <div class="form-group row">
-            <label for="surName" class="col-sm-3 float-left" translate>surname
-              <span class="text-danger" *ngIf="!applicationLightForm.value.surName">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
-              <input type="text" class="form-control" id="surName"
-                     formControlName="surName" [(ngModel)]="applicationLightForm.surName"/>
-              <div *ngIf="f.surName.touched && f.surName.invalid" class="text-danger">
-                <div *ngIf="f.surName.errors.required" translate>claim.requiredField</div>
-              </div>
+        <div class="col-sm-6 applicationLightForm" [formGroup]="applicationLightForm">
+          <p class="h5 font-weight-bold">Заметка</p>
+          <div class="row">
+            <input type="text" class="form-controls" id="surName" placeholder="Фамилия"
+                   formControlName="surName" required/>
+            <div *ngIf="f.surName.touched && f.surName.invalid" class="text-danger">
+              <div *ngIf="f.surName.errors.required" translate>claim.requiredField</div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="name" class="col-sm-3 col-form-label" translate>name
-              <span class="text-danger" *ngIf="!applicationLightForm.value.name">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
-              <input type="text" class="form-control" id="name"
-                     formControlName="name" [(ngModel)]="applicationLightForm.name"/>
-              <div *ngIf="f.name.touched && f.name.invalid" class="text-danger">
-                <div *ngIf="f.name.errors.required" translate>claim.requiredField</div>
-              </div>
+          <div class="row">
+            <input type="text" class="form-control" placeholder="Имя"
+                   formControlName="name"/>
+            <div *ngIf="f.name.touched && f.name.invalid" class="text-danger">
+              <div *ngIf="f.name.errors.required" translate>claim.requiredField</div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="patronymic" class="col-sm-3 col-form-label" translate>patronymic</label>
-            <div class="col-sm">
-              <input type="text" class="form-control" id="patronymic"
-                     formControlName="patronymic" [(ngModel)]="applicationLightForm.patronymic">
+          <div class="row">
+            <input type="text" class="form-control" id="patronymic" placeholder="Отчество"
+                   formControlName="patronymic">
+          </div>
+          <div class="row">
+            <input type="text" id="phoneNumber" class="form-control"
+                   name="phoneNumber" placeholder="Телефон"
+                   [formControl]="applicationLightForm.controls['phoneNumber']"
+                   prefix="+7" mask=' (000) 000-0000'
+                   placeHolderCharacter="0" (change)="searchByPhone()"/>
+            <div *ngIf="f.phoneNumber.touched && f.phoneNumber.invalid" class="text-danger">
+              <div *ngIf="f.phoneNumber.errors.required" translate>claim.requiredField</div>
             </div>
           </div>
-          <div class="form-group row">
-            <label for="phoneNumber" class="col-sm-3 col-form-label" translate>claim.contacts
-              <span class="text-danger" *ngIf="!applicationLightForm.value.phoneNumber">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
-              <input type="text" id="phoneNumber" class="form-control"
-                     name="phoneNumber"
-                     [formControl]="applicationLightForm.controls['phoneNumber']"
-                     prefix="+7" mask=' (000) 000-0000' [showMaskTyped]="true"
-                     placeHolderCharacter="0" (change)="searchByPhone()"/>
-              <div *ngIf="f.phoneNumber.touched && f.phoneNumber.invalid" class="text-danger">
-                <div *ngIf="f.phoneNumber.errors.required" translate>claim.requiredField</div>
-              </div>
-            </div>
+          <div class="row">
+            <textarea class="col-sm-12 form-controls" formControlName="note" placeholder="Комментарий"></textarea>
           </div>
-          <div class="form-group row">
-            <label for="form7" class="col-sm-3 col-form-label" translate>claim.comments</label>
-            <div class="col-sm">
-              <textarea id="form7" class="md-textarea form-control" rows="4" formControlName="note"></textarea>
-            </div>
-          </div>
-          <div class="form-group row" [hidden]="util.hasShowAgentGroup('CHOOSE_GROUP_AGENT', roles) &&
-                                         util.hasShowAgentGroup('CHOOSE_ANY_AGENT', roles)">
-            <label for="form7" class="col-sm-3 col-form-label" translate>Выберите агента
-              <span class="text-danger" *ngIf="!applicationLightForm.value.agentList">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
+          <div class="row">
+            <div class="col-sm-12">
               <ng-select
-                [items]="agentList"
-                formControlName="agentLogin"
-                bindValue="value"
-                placeholder="{{ 'patterns.chooseElement' | translate }}">
-              </ng-select>
-              <div *ngIf="f.agentLogin.touched && f.agentLogin.invalid" class="text-danger">
-                <div *ngIf="f.agentLogin.errors.required" translate>claim.requiredField</div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="form7" class="col-sm-3 col-form-label" translate>claim.operation
-              <span class="text-danger" *ngIf="!applicationLightForm.value.operationType">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
-              <ng-select
-                [items]="operationType"
-                formControlName="operationTypeId"
-                placeholder="{{ 'patterns.chooseElement' | translate }}">
-              </ng-select>
-              <div *ngIf="f.operationTypeId.touched && f.operationTypeId.invalid" class="text-danger">
-                <div *ngIf="f.operationTypeId.errors.required" translate>claim.requiredField</div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="form7" class="col-sm-3 col-form-label" translate>claim.objectType
-              <span class="text-danger" *ngIf="!applicationLightForm.value.objectType">&nbsp;*</span>
-            </label>
-            <div class="col-sm">
-              <ng-select
+                style="margin: 0 -15px"
                 [items]="objectType"
                 formControlName="objectTypeId"
-                placeholder="{{ 'patterns.chooseElement' | translate }}">
+                placeholder="{{ 'claim.objectType' | translate }}">
               </ng-select>
               <div *ngIf="f.objectTypeId.touched && f.objectTypeId.invalid" class="text-danger">
                 <div *ngIf="f.objectTypeId.errors.required" translate>claim.requiredField</div>
               </div>
             </div>
           </div>
-          <button class="btn btn-link float-left" (click)="clear()" translate>clear</button>
-          <button class="btn btn-success float-right" [disabled]="!this.applicationLightForm.valid" (click)="onSave()" translate>patterns.save</button>
+          <div class="row">
+            <div class="col-sm-3" *ngFor="let type of operationType;let i = index">
+              <div class="form-check-inline">
+                <label class="form-check-label">
+                  <input type="radio" class="form-check-input" formControlName="operationTypeId" value="">{{type.label}}
+                </label>
+              </div>
+              <div *ngIf="f.operationTypeId.touched && f.operationTypeId.invalid" class="text-danger">
+                <div *ngIf="f.operationTypeId.errors.required" translate>claim.requiredField</div>
+              </div>
+            </div>
+            <div class="col-sm" [hidden]="util.hasShowAgentGroup('CHOOSE_GROUP_AGENT', roles) &&
+                                         util.hasShowAgentGroup('CHOOSE_ANY_AGENT', roles)">
+              <ng-select
+                style="margin: 0 -15px"
+                [items]="agentList"
+                formControlName="agentLogin"
+                bindValue="value"
+                placeholder="{{ 'Выберите агента' | translate }}">
+              </ng-select>
+              <div *ngIf="f.agentLogin.touched && f.agentLogin.invalid" class="text-danger">
+                <div *ngIf="f.agentLogin.errors.required" translate>claim.requiredField</div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <button class="btn col-sm btn-link float-left" (click)="clear()" translate>clear</button>
+            <button class="btn btn-default col-sm float-right" [disabled]="!this.applicationLightForm.valid"
+                    (click)="onSave()" translate>patterns.save
+            </button>
+          </div>
         </div>
       </div>
+
+
       <br/>
       <div class="row">
         <div class="col-sm">
