--- a/frontend/src/app/components/objects/objects.component.html
+++ b/frontend/src/app/components/objects/objects.component.html
@@ -1,4 +1,4 @@
-<div class="card-body card-bg" ngxUiLoaderBlurred>
+<div class="card-body card-bg" >
   <div class="card">
     <div class="card-body">
       <br/>
