--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -4,7 +4,7 @@ html, body, app-root {
 }
 
 .main-block {
-  margin-top: -26px;
+  //margin-top: -26px;
   margin-left: -15px;
   position: fixed;
   min-width: 100%;
