--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,6 +2,7 @@
 
   <!-- Sidebar -->
   <div class="bg-dark border-right" id="sidebar-wrapper" *ngIf="currentUser">
+    <div class="mb-5"></div>
     <div class="row">
       <img (click)="util.dnHref('home')" src="assets/images/logo2.png"
            style="margin: 0 auto; max-width: 151px; max-height: 131px"/>
@@ -20,7 +21,7 @@
   </div>
   <div id="page-content-wrapper" class="page-content-wrapper">
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom" [hidden]="!currentUser">
-      <button class="btn bg-transparent" id="menu-toggle"><i aria-hidden="true" class="fa fa-bars"></i></button>
+      <button class="bg-transparent expand-btn-nav" id="menu-toggle"><i aria-hidden="true" class="fa fa-bars"></i></button>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +47,7 @@
             <a class="nav-link p-0 dropdown-toggle nav-link-name" style="font-size: 14px" href="#" id="navbarDropdown"
                role="button" data-toggle="dropdown"
                aria-haspopup="true" aria-expanded="false">
-              <img [src]="getImgUrl(uuid)" class="rounded-circle" style="width: 2.5rem; height: 2.5rem" [alt]=""/>
+              <img *ngIf="getImgUrl(uuid)" [src]="getImgUrl(uuid)" class="rounded-circle" style="width: 2.5rem; height: 2.5rem" [alt]=""/>
               <span>{{currentUser?.surname}} {{currentUser?.name}}</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -66,9 +67,9 @@
         </router-outlet>
         <toast-messages></toast-messages>
         <ngx-ui-loader></ngx-ui-loader>
-        <br>
-        <br>
-        <app-footer></app-footer>
+<!--        <br>-->
+<!--        <br>-->
+<!--        <app-footer></app-footer>-->
       </div>
     </div>
   </div>
