--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .page-content-wrapper nav {
-  height: 5.625rem;
+  min-height: 5.625rem;
 }
 
 .nav-link-name {
@@ -22,6 +22,10 @@ a, a:active {
   color: #ffffff;
 }
 
+.expand-btn-nav {
+  outline: 0;
+  border: 0;
+}
 
 
 
