--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -21,3 +21,40 @@
 textarea.form-controls {
   height: 4.375rem;
 }
+
+input[type='radio']:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color: #d1d3d1;
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+input[type='radio']:checked:after,input[type='radio']:checked:before {
+  background-color: #00b2a8;
+}
+
+.badge-txt {
+  font-family: Montserrat-Bold;
+  font-size: 1.125rem;
+}
+
+table {
+  font-family: Montserrat-Bold;
+  color: #767d86;
+  line-height: 1.75rem;
+  font-size: 1.125rem;
+}
+
+table thead {
+  font-family: Montserrat-Regular;
+  color: #767d86;
+  line-height: 1.75rem;
+  font-size: 1.125rem;
+}
