--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -174,7 +174,7 @@
             <tbody style="cursor: pointer">
             <tr *ngFor="let claim of claimLightData;let i = index" class="text-center">
               <td>
-                <a [routerLink]="['/create-claim/', claim?.id]">{{claim.id}}</a>
+                <a [routerLink]="['/create-claim-view/', claim?.id]">{{claim.id}}</a>
               </td>
               <td>{{getDicNameByLanguage(claim, 'operationType')}}</td>
               <td>{{getDicNameByLanguage(claim, 'objectType')}}</td>
