--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="card-body card-bg" ngxUiLoaderBlurred>
+  <div class="card-body bg-white" ngxUiLoaderBlurred>
 
     <div class="row">
       <div class="btn-group btn-breadcrumb">
@@ -43,7 +43,7 @@
           <span>Фильтры:</span>
           <button type="button" class="btn btn-sm btn-link" (click)="filtredLogin(null)">Все</button>
           <a type="button" *ngFor="let agent of agentList;let i = index"
-                  class="btn btn-sm btn-link" (click)="filtredLogin(agent.login)">{{agent.name}}</a>
+                  class="btn btn-sm btn-link " (click)="filtredLogin(agent.login)">{{agent.name}}</a>
         </div>
       </div>
       <br>
@@ -87,8 +87,8 @@
                       *ngIf="activeTab == 2">{{item?.residentialComplex ? item?.residentialComplex[getDicNameByLanguage()] : ''}}</span>
                     <span *ngIf="activeTab == 1">{{item.district?.name[getDicNameByLanguage()]}}</span>
                     <br/><span>цена: {{item.price | mask : 'separator.2'}}</span></p>
-                  <i class="fa fa-phone" *ngIf="item.phone"><a href="tel:8{{item.phone}}"
-                                                               class="text-white">+7{{item.phone | mask: ' (000) 000-0000'}}</a></i>
+                  <i class="fa fa-phone" *ngIf="item.phone">
+                    <a href="tel:8{{item.phone}}" class="text-white">+7{{item.phone | mask: ' (000) 000-0000'}}</a></i>
                 </div>
                 <div class="card-footer">
                   {{item.clientFullname}}
